# rationsmart-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
src/: __init__.py  client.py  index.ts  rationsmart-client.ts  server.py
src/tools/: __init__.py
