[project]
name = "rationsmart-mcp-server"
version = "0.1.0"
description = "MCP Server for RationSmart - enables AI assistants to manage cow diets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
rationsmart-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
